# PySketcher

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  run_forge.py  test_parser.py
.github/workflows/: release.yml
sketchforge/: __init__.py  _sketchforge_core.pyi  cli.py  core.py  tui.py  utils.py  watcher.py
sketchforge/engine/: analyzers.py  capturer.py  generator.py  generators.py  inspector.py
sketchforge/templates/: pydantic.j2  pytorch.j2  sqlalchemy.j2
src/: lib.rs  parser.rs  scanner.rs
tests/: test_generators.py  test_parser.py
